- desktop files cleaning: conversion to UTF-8, pl translations, names   starts with caps, Xwindows -> Xwindow, etc.
Changed files:
    lyx.desktop -> 1.4

--- a/lyx.desktop
+++ b/lyx.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=LyX
 Comment=A WYSIWYG frontend to LaTeX
-Comment[pl]=WYSIWYG nakładka na LaTeXa
+Comment[pl]=Nakładka typu WYSIWYG na LaTeXa
 Icon=lyx.png
 Exec=lyx
 Terminal=0
