--- a/lyx.desktop
+++ b/lyx.desktop
@@ -5,5 +5,5 @@ Comment[pl]=Nakładka typu WYSIWYG na LaTeXa
 Icon=lyx.png
 Exec=lyx
 Terminal=0
-Type=Applications/Editors
+Type=Application
 # vi: encoding=utf-8
