- s/^Terminal=0/Terminal=false/ s/^Terminal=1/Terminal=true/ to conform   freedesktop.org desktop-entry specification
Changed files:
    lyx.desktop -> 1.7

--- a/lyx.desktop
+++ b/lyx.desktop
@@ -4,7 +4,7 @@ Comment=A WYSIWYG frontend to LaTeX
 Comment[pl]=Nakładka typu WYSIWYG na LaTeXa
 Icon=lyx.png
 Exec=lyx
-Terminal=0
+Terminal=false
 Type=Application
 Encoding=UTF-8
 # vi: encoding=utf-8
