--- a/lyx.desktop
+++ b/lyx.desktop
@@ -7,5 +7,5 @@ Exec=lyx
 Terminal=false
 Type=Application
 Encoding=UTF-8
-Categories=Office;WordProcessor;
+Categories=Qt;Office;WordProcessor;
 # vi: encoding=utf-8
