- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    lyx.desktop -> 1.10

--- a/lyx.desktop
+++ b/lyx.desktop
@@ -2,10 +2,9 @@
 Name=LyX
 Comment=A WYSIWYG frontend to LaTeX
 Comment[pl]=Nakładka typu WYSIWYG na LaTeXa
-Icon=lyx.png
+Icon=lyx
 Exec=lyx
 Terminal=false
 Type=Application
-Encoding=UTF-8
 Categories=Qt;Office;WordProcessor;
 # vi: encoding=utf-8
